# keepassxc-dbus-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/keepassxc_dbus_mcp/: credential_service.py  mcp_server.py
tests/: test_credential_service.py  test_dbus_connection.py
tests/dbusmock/: test_secret_service_mock.py
tests/unit/: test_credential_service_unit.py  test_keypair_tools.py  test_mcp_server_unit.py  test_search_enhanced.py
